@@ -1,9 +1,14 @@
 package org.folio.moduserstest;
 
-import io.vertx.core.Future;
-import io.vertx.core.Vertx;
-import io.vertx.junit5.VertxTestContext;
-import lombok.SneakyThrows;
+import static org.folio.kafka.KafkaTopicNameHelper.getDefaultNameSpace;
+import static org.folio.rest.utils.OkapiConnectionParams.OKAPI_TENANT_HEADER;
+
+import java.lang.reflect.Field;
+import java.time.Duration;
+import java.util.Collections;
+import java.util.List;
+import java.util.Properties;
+
 import org.apache.commons.collections4.IteratorUtils;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
@@ -37,15 +42,10 @@ import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.kafka.KafkaContainer;
 import org.testcontainers.utility.DockerImageName;
 
-import java.lang.reflect.Field;
-import java.time.Duration;
-import java.util.Collections;
-import java.util.List;
-import java.util.Properties;
-import java.util.stream.Collectors;
-
-import static org.folio.kafka.KafkaTopicNameHelper.getDefaultNameSpace;
-import static org.folio.rest.utils.OkapiConnectionParams.OKAPI_TENANT_HEADER;
+import io.vertx.core.Future;
+import io.vertx.core.Vertx;
+import io.vertx.junit5.VertxTestContext;
+import lombok.SneakyThrows;
 
 public abstract class AbstractRestTest {
   private static final Logger LOG = LoggerFactory.getLogger(AbstractRestTest.class);
@@ -58,6 +58,7 @@ public abstract class AbstractRestTest {
   protected static OkapiUrl okapiUrl;
   protected static OkapiHeaders okapiHeaders;
   protected static KafkaProducer<String, String> kafkaProducer;
+  protected static Vertx vertx;
 
   private static final KafkaContainer kafkaContainer =
     new KafkaContainer(DockerImageName.parse(KAFKA_IMAGE_NAME));
@@ -74,9 +75,13 @@ public abstract class AbstractRestTest {
     okapiHeaders = new OkapiHeaders(okapiUrl, TENANT_NAME, token);
 
     kafkaContainer.start();
+    String kafkaHost = kafkaContainer.getHost();
+    String kafkaPort = String.valueOf(kafkaContainer.getFirstMappedPort());
     updateKafkaConfigField("envId", KAFKA_ENV_VALUE);
-    updateKafkaConfigField("kafkaHost", kafkaContainer.getHost());
-    updateKafkaConfigField("kafkaPort", String.valueOf(kafkaContainer.getFirstMappedPort()));
+    updateKafkaConfigField("kafkaHost", kafkaHost);
+    updateKafkaConfigField("kafkaPort", kafkaPort);
+    System.setProperty("kafka-host", kafkaHost);
+    System.setProperty("kafka-port", kafkaPort);
 
     kafkaProducer = createKafkaProducer();
 
@@ -95,7 +100,7 @@ public abstract class AbstractRestTest {
     .withServices(LocalStackContainer.Service.S3);
 
   @BeforeClass
-  public static void setUpClass() throws Exception {
+  public static void setUpClass() {
     localStackContainer.start();
     System.setProperty("AWS_URL", localStackContainer.getEndpoint().toString());
     System.setProperty("AWS_REGION", localStackContainer.getRegion());
@@ -115,7 +120,6 @@ public abstract class AbstractRestTest {
     );
     s3Client.createBucketIfNotExists();
   }
-
 
   @AfterAll
   public static void after(VertxTestContext context) {
@@ -144,7 +148,7 @@ public abstract class AbstractRestTest {
       records = kafkaConsumer.poll(Duration.ofMillis(3000));
     }
     return IteratorUtils.toList(records.iterator()).stream()
-        .map(ConsumerRecord::value).collect(Collectors.toList());
+        .map(ConsumerRecord::value).toList();
   }
 
   private static KafkaProducer<String, String> createKafkaProducer() {
@@ -158,9 +162,9 @@ public abstract class AbstractRestTest {
   @SneakyThrows
   public RecordMetadata sendEvent(String tenantId, String topic, String key, String value) {
     String topicName = formatToKafkaTopicName(tenantId, topic);
-    ProducerRecord<String, String> record = new ProducerRecord<>(topicName, key, value);
-    record.headers().add(OKAPI_TENANT_HEADER, TENANT_NAME.getBytes());
-    return kafkaProducer.send(record).get();
+    ProducerRecord<String, String> producerRecord = new ProducerRecord<>(topicName, key, value);
+    producerRecord.headers().add(OKAPI_TENANT_HEADER, TENANT_NAME.getBytes());
+    return kafkaProducer.send(producerRecord).get();
   }
 
   private static String formatToKafkaTopicName(String tenant, String eventType) {
